fix: use correct link for about.md

--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
       <div id="pointer" style="display:none;"></div>
 
 			<div id="box1">
-				<a href="/about.md" class="logo" aria-label="About Hastebin"></a>
+				<a href="https://gist.github.com/324Luke/b0dd055aeacff0f267bf68e64b74193d" class="logo" aria-label="About Hastebin"></a>
 			</div>
 
       <div id="box2">
