feat(fetch): override hljs auto-detection with optional file extension in url

--- a/internal/server/web/document.html
+++ b/internal/server/web/document.html
@@ -64,7 +64,7 @@
         <div id="line-numbers">
             {{.Lines}}
         </div>
-        <pre><code>{{.Content}}</code></pre>
+        <pre><code class="language-{{.Extension}}">{{.Content}}</code></pre>
     </main>
 
     <script src="/static/highlight.min.js"></script>
