--- a/internal/server/web/document.html
+++ b/internal/server/web/document.html
@@ -58,6 +58,15 @@
                 <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
             </svg>
         </button>
+
+        <p id="donate-long">
+            Keep Spacebin free of ads by
+            <a id="donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin" target="_blank">donating.</a>
+            💕
+        </p>
+        <p id="donate-short">
+            <a id="short-donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin" target="_blank">Donate 💕</a>
+        </p>
     </header>
 
     <main>
