--- a/internal/server/web/index.html
+++ b/internal/server/web/index.html
@@ -35,7 +35,7 @@
             </svg>
         </button>
 
-        <a id="github" href="https://github.com/orca-group/spirit" aria-label="Spacebin Github">
+        <a id="github" href="https://github.com/lukewhrit/spacebin" aria-label="Spacebin Github" target="_blank">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -43,13 +43,22 @@
             </svg>
         </a>
 
-        <a id="wiki" href="https://github.com/orca-group/spirit/blob/main/README.md/#-spirit" aria-label="Spacebin Documentation">
+        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spirit" aria-label="Spacebin Documentation" target="_blank">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
                 <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z" />
             </svg>
         </a>
+
+        <p id="donate-long">
+            Keep Spacebin free of ads by
+            <a id="donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin" target="_blank">donating.</a>
+            💕
+        </p>
+        <p id="donate-short">
+            <a id="short-donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin" target="_blank">Donate 💕</a>
+        </p>
     </header>
 
     <main>
