--- a/internal/server/web/document.html
+++ b/internal/server/web/document.html
@@ -35,7 +35,7 @@
             </svg>
         </a>
 
-        <a id="github" href="https://github.com/orca-group/spirit" aria-label="Spacebin Github">
+        <a id="github" href="https://github.com/lukewhrit/spacebin" aria-label="Spacebin Github">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path
