--- a/internal/server/web/error.html
+++ b/internal/server/web/error.html
@@ -36,7 +36,7 @@
         </a>
 
 
-        <a id="github" href="https://github.com/orca-group/spirit" aria-label="Spacebin Github">
+        <a id="github" href="https://github.com/lukewhrit/spacebin" aria-label="Spacebin Github">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -44,7 +44,7 @@
             </svg>
         </a>
 
-        <a id="wiki" href="https://github.com/orca-group/spirit/blob/main/README.md/#-spirit"
+        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spirit"
             aria-label="Spacebin Documentation">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
