fix: spirit -> spacebin

--- a/internal/server/web/error.html
+++ b/internal/server/web/error.html
@@ -44,7 +44,7 @@
             </svg>
         </a>
 
-        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spirit"
+        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spacebin"
             aria-label="Spacebin Documentation">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
