--- a/internal/server/web/index.html
+++ b/internal/server/web/index.html
@@ -43,7 +43,7 @@
             </svg>
         </a>
 
-        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spirit" aria-label="Spacebin Documentation" target="_blank">
+        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spacebin" aria-label="Spacebin Documentation" target="_blank">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
