feat(server): add optional analytics tracker tag

--- a/internal/server/web/document.html
+++ b/internal/server/web/document.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" type="text/css" href="/static/normalize.css">
     <link rel="stylesheet" type="text/css" href="/static/monokai.min.css">
     <link rel="stylesheet" type="text/css" href="/static/global.css">
+
+    {{.Analytics}}
 </head>
 
 <body>
