--- a/internal/server/web/index.html
+++ b/internal/server/web/index.html
@@ -17,6 +17,8 @@
         content="Spacebin is a highly-reliable pastebin server, built with Go, that's capable of serving notes, code, or any other documents." />
     <meta property="og:color" content="#e34b4a" />
 
+    {{.Analytics}}
+
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/static/normalize.css">
     <link rel="stylesheet" type="text/css" href="/static/global.css">
