--- a/internal/server/web/index.html
+++ b/internal/server/web/index.html
@@ -45,7 +45,8 @@
             </svg>
         </a>
 
-        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spacebin" aria-label="Spacebin Documentation" target="_blank">
+        <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spacebin"
+            aria-label="Spacebin Documentation" target="_blank">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
@@ -55,16 +56,18 @@
 
         <p id="donate-long">
             Keep Spacebin free of ads by
-            <a id="donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin" target="_blank">donating.</a>
+            <a id="donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin"
+                target="_blank">donating.</a>
             💕
         </p>
         <p id="donate-short">
-            <a id="short-donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin" target="_blank">Donate 💕</a>
+            <a id="short-donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin"
+                target="_blank">Donate 💕</a>
         </p>
     </header>
 
-    <main>
-        <div id="line-numbers">
+    <main id="with-prompt">
+        <div id="prompt">
             <div>&gt;</div>
         </div>
 
