--- a/internal/server/web/error.html
+++ b/internal/server/web/error.html
@@ -26,17 +26,16 @@
     <header>
         <img src="/static/logo.svg" alt="Spacebin Logo" />
 
-        <a id="home" href="/" aria-label="Spacebin Home Page">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
-                class="main-grid-item-icon" fill="none" stroke="currentColor" stroke-linecap="round"
-                stroke-linejoin="round" stroke-width="2">
-                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
-                <polyline points="9 22 9 12 15 12 15 22" />
+        <button id="save" type="submit" aria-label="Save Document" form="text" value="Save Document">
+            <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z" />
+                <polyline points="17 21 17 13 7 13 7 21" />
+                <polyline points="7 3 7 8 15 8" />
             </svg>
-        </a>
+        </button>
 
-
-        <a id="github" href="https://github.com/lukewhrit/spacebin" aria-label="Spacebin Github">
+        <a id="github" href="https://github.com/lukewhrit/spacebin" aria-label="Spacebin Github" target="_blank">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -45,7 +44,7 @@
         </a>
 
         <a id="wiki" href="https://github.com/lukewhrit/spacebin/blob/main/README.md/#-spacebin"
-            aria-label="Spacebin Documentation">
+            aria-label="Spacebin Documentation" target="_blank">
             <svg fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                 stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
@@ -53,14 +52,22 @@
             </svg>
         </a>
 
-        <p id="donate" aria-label="Spacebin Donation Page">
-            Keep Spacebin free of ads by <a href="https://github.com/sponsors/lukewhrit">donating</a>. ❤️
+        <p id="donate-long">
+            Keep Spacebin free of ads by
+            <a id="donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin"
+                target="_blank">donating.</a>
+            💕
+        </p>
+        <p id="donate-short">
+            <a id="short-donate-link" href="https://github.com/sponsors/lukewhrit" aria-label="Donate to Spacebin"
+                target="_blank">Donate 💕</a>
         </p>
     </header>
 
-    <main>
+    <main id="with-prompt">
         <h1 id="error">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28" id="warning" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="28" height="28" id="warning" fill="none"
+                stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                 <circle cx="12" cy="12" r="10" />
                 <line x1="12" x2="12" y1="8" y2="12" />
                 <line x1="12" x2="12.01" y1="16" y2="16" />
